apps/public/trilium.rohrbom.be/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-trilium
  labels:
    gitops: flux
