apps/public/trilium.rohrbom.be/netpol-egress-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trilium-egress-deny
  namespace: svc-trilium
spec:
  podSelector:
    matchLabels:
      app: trilium
  policyTypes: [Egress]
  egress: []
